Traffic Signal Page Update-6

--- a/manuscript/page-31/body.html
+++ b/manuscript/page-31/body.html
@@ -1,39 +1,44 @@
 <div class="leaf flex">
   <div class="inner justify ">
 
-    <p><b>Winding Road:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/winding_road.jpg" alt="Winding Road" style="width:50px;height:50px;">
-      The road ahead winds with
-    a series of turns or curves. On all curves, slow
-    down for better control.</p>
+    <p><b>Crossbuck and Flashing Lights:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/crossbuck_with_flashing_lights.jpg" alt="Crossbuck With Flashing lights" style="width:50px;height:50px;">
+       Flashing lights
+may be used with crossbuck signs. Always stop
+when the light begins to flash and be alert for
+approaching trains. Do not proceed until all
+trains or any other vehicles using the rails have
+passed, the tracks are clear, and the lights are
+no longer flashing. Be especially alert at multitrack
+crossings because a second train could be
+approaching from the opposite direction.</p>
 
-    <p><b>Low Ground Railroad Crossing:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/low_ground_railroad_xing.jpg" alt="Low Ground Railroad Crossing" style="width:50px;height:50px;">
-      A steep slope where the railroad tracks cross the road may
-    cause the bottom of low vehicles to get caught
-    or drag on the tracks.</p>
+    <p><b>Crossbuck, Flashing Lights and Gate:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/crossbuck_with_flashing_lights_gate.jpg" alt="Crossbuck with Flashing Lights & Gate" style="width:50px;height:50px;">
+      Gates are used with flashing light signals at some
+crossings. Stop when the lights begin to flash and
+before the gate lowers. Remain stopped until the
+gates are raised and the lights stop flashing. Do
+not attempt to drive around the
+lowered gate.</p>
 
-    <p><b>Railroad Crossing:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/railroad_xing.jpg" alt="Railroad Crossing" style="width:50px;height:50px;">
-      Advance warning signs are
-    placed before a railroad crossing. These signs
-    warn you to look, listen, slow down and be
-    prepared to stop for trains or any vehicles using
-    the rails.</p>
-
-    <p><b>Railroad Crossbuck:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/railroad_xbuck.jpg" alt="Railroad Crossbuck" style="width:50px;height:50px;">
-      This sign is a warning of a
-    railroad crossing. Look, listen, slow down and
-    be prepared to stop for trains or any vehicles
-    using the rails.</p>
-
-    <p><b>Railroad Crossbuck and Track Indicator:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/railroad_xbuck_with_track_ind.jpg" alt="Railroad Crossbuck with Track Ind" style="width:50px;height:50px;">
-      If there is more than one track, the sign below the
-    crossbuck will indicate the number of tracks at
-    the crossing. Slow down and be prepared to
-    stop.</p>
+    <p>Pavement markings, consisting
+      of an X and RR, may
+      be painted on the
+      pavement at the
+      approach to some
+      crossings.
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/pavement_rr.jpg" alt="RR Sign on Pavements" style="width:50px;height:50px;">
+      When approaching railroad
+      tracks, be alert. Trains
+      may approach the
+      crossing at any time and
+      from either direction.
+      Unless you can clear the
+      tracks completely, never
+      start across the tracks.
+      Make sure there is room for your vehicle on the other side of
+      the tracks before proceeding.</p>
 
   </div>
 </div>
