Traffic Signal Page Update-7

--- a/manuscript/page-35/body.html
+++ b/manuscript/page-35/body.html
@@ -1,6 +1,37 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Hello world! </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+    <p><b> In a work zone,</b> the lives of highway construction workers
+depend on drivers like you obeying the posted speed limits. If
+you are convicted of exceeding the speed limit in a highway
+work zone, you may be fined up to $500. Remember, the color
+orange marks a work zone and means slow down and be alert.</p>
+
+    <p><b>Rough Road, Bump, or Uneven Lanes:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/rough_bump_uneven.jpg" alt="Rough Bump Uneven Road" style="width:150px;height:50px;">
+      These signs are used
+when certain road conditions, such as loose gravel or road
+construction, affect
+the roadway surface
+and create potentially
+difficult conditions for
+motorists, especially
+motorcyclists.</p>
+
+    <p><b>Road Construction Ahead – Detour:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/road_work.jpg" alt="Road Work" style="width:50px;height:50px;">
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/detour.jpg" alt="Detour" style="width:50px;height:50px;">
+      These signs indicate a change in the traffic pattern
+or route ahead. Slow down. Unusual or
+potentially dangerous conditions are ahead.
+
+
+    <p><b>Flashing Arrow Panels:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/flashing_arrow.jpg" alt="Flashing Arrow" style="width:50px;height:50px;">
+      Large flashing arrow
+panels or flashing message signs in work zones
+direct drivers to proceed into different traffic
+lanes and inform them that part of the road
+ahead is closed.</p>
+
   </div>
 </div>
