--- a/manuscript/page-36/body.html
+++ b/manuscript/page-36/body.html
@@ -1,6 +1,39 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Hello world! </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+
+    <p><b>Flaggers:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/flaggers.jpg" alt="Flaggers" style="width:50px;height:50px;">
+      Flaggers are construction
+workers who normally wear orange or
+yellow vests, or yellow-green shirts or
+jackets. They use STOP/SLOW paddles
+and red flags to direct traffic through
+the work zone and to let other workers
+or construction vehicles cross the road.</p>
+
+    <p><b>Traffic Control Devices:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/barricades.jpg" alt="Barricades" style="width:50px;height:50px;">
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/drums.jpg" alt="Drums" style="width:50px;height:50px;">
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/cones.jpg" alt="Cones" style="width:50px;height:50px;">
+      Barricades, vertical signs, concrete
+barriers, drums and cones are the
+most common devices used to guide
+drivers safely through work zones.
+When driving near the devices, keep
+your vehicle in the middle of the lane
+and obey the posted speed limit. As
+you leave the work zone, stay in your
+lane and maintain your speed. Don’t
+change lanes until you are completely
+clear of the work zone.
+
+    <p><b>Message Boards:</b>
+      You may see portable or permanent
+message boards along roadways. They provide information
+about traffic, road, weather or other hazardous conditions.
+Always obey any directions posted on these message boards.
+For information about road conditions or road construction,
+visit the Virginia Department of Transportation website at
+www.virginiadot.org.</p>
   </div>
 </div>
