--- a/manuscript/page-38/body.html
+++ b/manuscript/page-38/body.html
@@ -1,6 +1,24 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Hello world! </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+    <p><b>Broken yellow center lines</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/broken_yellow_center_lines.jpg" alt="Broken Yellow Center Lines" style="width:150px;height:200px;">
+      mean that passing on the left
+      is allowed in either direction
+      when the way ahead is clear.</p>
+
+    <p><b>A broken yellow line
+      alongside a solid yellow line</b>
+      means that passing is allowed
+      from the side of the broken
+      line, but not from the side of
+      the solid line.<br><br>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/broken_solid_yellow_lines.jpg" alt="Broken Solid Yellow Lines" style="width:150px;height:200px;">
+      Vehicles on the solid yellow
+      line side may only cross the
+      line to pass pedestrians,
+      scooters or skateboards,
+      bicyclists, and riders of
+      when the opposite lane is
+      clear and you can pass safely.</p>
   </div>
 </div>
