--- a/manuscript/page-33/body.html
+++ b/manuscript/page-33/body.html
@@ -1,37 +1,44 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p><b> In a work zone,</b> the lives of highway construction workers
-depend on drivers like you obeying the posted speed limits. If
-you are convicted of exceeding the speed limit in a highway
-work zone, you may be fined up to $500. Remember, the color
-orange marks a work zone and means slow down and be alert.</p>
 
-    <p><b>Rough Road, Bump, or Uneven Lanes:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/rough_bump_uneven.jpg" alt="Rough Bump Uneven Road" style="width:150px;height:50px;">
-      These signs are used
-when certain road conditions, such as loose gravel or road
-construction, affect
-the roadway surface
-and create potentially
-difficult conditions for
-motorists, especially
-motorcyclists.</p>
+    <p><b>Crossbuck and Flashing Lights:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/crossbuck_with_flashing_lights.jpg" alt="Crossbuck With Flashing lights" style="width:50px;height:50px;">
+       Flashing lights
+may be used with crossbuck signs. Always stop
+when the light begins to flash and be alert for
+approaching trains. Do not proceed until all
+trains or any other vehicles using the rails have
+passed, the tracks are clear, and the lights are
+no longer flashing. Be especially alert at multitrack
+crossings because a second train could be
+approaching from the opposite direction.</p>
 
-    <p><b>Road Construction Ahead – Detour:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/road_work.jpg" alt="Road Work" style="width:50px;height:50px;">
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/detour.jpg" alt="Detour" style="width:50px;height:50px;">
-      These signs indicate a change in the traffic pattern
-or route ahead. Slow down. Unusual or
-potentially dangerous conditions are ahead.
+    <p><b>Crossbuck, Flashing Lights and Gate:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/crossbuck_with_flashing_lights_gate.jpg" alt="Crossbuck with Flashing Lights & Gate" style="width:50px;height:50px;">
+      Gates are used with flashing light signals at some
+crossings. Stop when the lights begin to flash and
+before the gate lowers. Remain stopped until the
+gates are raised and the lights stop flashing. Do
+not attempt to drive around the
+lowered gate.</p>
 
-
-    <p><b>Flashing Arrow Panels:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/flashing_arrow.jpg" alt="Flashing Arrow" style="width:50px;height:50px;">
-      Large flashing arrow
-panels or flashing message signs in work zones
-direct drivers to proceed into different traffic
-lanes and inform them that part of the road
-ahead is closed.</p>
+    <p>Pavement markings, consisting
+      of an X and RR, may
+      be painted on the
+      pavement at the
+      approach to some
+      crossings.
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/pavement_rr.jpg" alt="RR Sign on Pavements" style="width:50px;height:50px;">
+      When approaching railroad
+      tracks, be alert. Trains
+      may approach the
+      crossing at any time and
+      from either direction.
+      Unless you can clear the
+      tracks completely, never
+      start across the tracks.
+      Make sure there is room for your vehicle on the other side of
+      the tracks before proceeding.</p>
 
   </div>
 </div>
