--- a/manuscript/page-34/body.html
+++ b/manuscript/page-34/body.html
@@ -1,39 +1,33 @@
 <div class="leaf flex">
   <div class="inner justify ">
 
-    <p><b>Flaggers:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/flaggers.jpg" alt="Flaggers" style="width:50px;height:50px;">
-      Flaggers are construction
-workers who normally wear orange or
-yellow vests, or yellow-green shirts or
-jackets. They use STOP/SLOW paddles
-and red flags to direct traffic through
-the work zone and to let other workers
-or construction vehicles cross the road.</p>
+    <p>Note: School buses must always stop at railroad crossings,
+    even when the lights are not flashing.</p>
 
-    <p><b>Traffic Control Devices:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/barricades.jpg" alt="Barricades" style="width:50px;height:50px;">
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/drums.jpg" alt="Drums" style="width:50px;height:50px;">
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/cones.jpg" alt="Cones" style="width:50px;height:50px;">
-      Barricades, vertical signs, concrete
-barriers, drums and cones are the
-most common devices used to guide
-drivers safely through work zones.
-When driving near the devices, keep
-your vehicle in the middle of the lane
-and obey the posted speed limit. As
-you leave the work zone, stay in your
-lane and maintain your speed. Don’t
-change lanes until you are completely
-clear of the work zone.
+    <p>If a dangerous condition exists at a
+    rail crossing, call the number listed on
+    the emergency sign.
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/emergency_rr.jpg" alt="Emergency On RR" style="width:50px;height:50px;">
+    This will allow
+    the rail company to stop or reroute
+    approaching rail traffic until the hazard
+    is removed. Be sure to give the posted
+    crossing number so that the hazard can
+    be identified correctly.</p>
 
-    <p><b>Message Boards:</b>
-      You may see portable or permanent
-message boards along roadways. They provide information
-about traffic, road, weather or other hazardous conditions.
-Always obey any directions posted on these message boards.
-For information about road conditions or road construction,
-visit the Virginia Department of Transportation website at
-www.virginiadot.org.</p>
+    <p>If your car
+    stalls on the
+    tracks, don’t
+    hesitate.
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/car_stall_rr.jpg" alt="Car Stalls on RR" style="width:50px;height:50px;">
+    Get out of the car
+    right away and
+    run diagonally
+    away from the
+    tracks in the
+    direction of
+    the oncoming
+    train.</p>
+
   </div>
 </div>
