--- a/manuscript/page-39/body.html
+++ b/manuscript/page-39/body.html
@@ -1,39 +1,25 @@
 <div class="leaf flex">
   <div class="inner justify ">
+    <p><b>Double solid yellow lines</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/double_solid_yellow_lines.jpg" alt="Double Solid Yellow Lines" style="width:200px;height:200px;">
+      mark the center of the road
+and separate traffic traveling
+in two different directions.
+Passing is not allowed in
+either direction. You may not
+cross the lines unless you are
+making a left turn or passing
+pedestrians, bicyclists,
+and riders of scooters or
+skateboards, when the
+opposite lane is clear and
+you can pass safely.</p>
 
-    <p><b>Winding Road:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/winding_road.jpg" alt="Winding Road" style="width:50px;height:50px;">
-      The road ahead winds with
-    a series of turns or curves. On all curves, slow
-    down for better control.</p>
-
-    <p><b>Low Ground Railroad Crossing:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/low_ground_railroad_xing.jpg" alt="Low Ground Railroad Crossing" style="width:50px;height:50px;">
-      A steep slope where the railroad tracks cross the road may
-    cause the bottom of low vehicles to get caught
-    or drag on the tracks.</p>
-
-    <p><b>Railroad Crossing:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/railroad_xing.jpg" alt="Railroad Crossing" style="width:50px;height:50px;">
-      Advance warning signs are
-    placed before a railroad crossing. These signs
-    warn you to look, listen, slow down and be
-    prepared to stop for trains or any vehicles using
-    the rails.</p>
-
-    <p><b>Railroad Crossbuck:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/railroad_xbuck.jpg" alt="Railroad Crossbuck" style="width:50px;height:50px;">
-      This sign is a warning of a
-    railroad crossing. Look, listen, slow down and
-    be prepared to stop for trains or any vehicles
-    using the rails.</p>
-
-    <p><b>Railroad Crossbuck and Track Indicator:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/railroad_xbuck_with_track_ind.jpg" alt="Railroad Crossbuck with Track Ind" style="width:50px;height:50px;">
-      If there is more than one track, the sign below the
-    crossbuck will indicate the number of tracks at
-    the crossing. Slow down and be prepared to
-    stop.</p>
+    <p><b>Broken white lines</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/broken_white_lines.jpg" alt="Broken White Lines" style="width:200px;height:200px;">
+      separate lanes of traffic going in the
+same direction. You may
+change lanes with caution.</p>
 
   </div>
 </div>
