Adding assets up to page 3. Moving parallel parking to page - 35

--- a/manuscript/page-40/body.html
+++ b/manuscript/page-40/body.html
@@ -26,10 +26,10 @@
             <div class="light light-right"> 
             </div>
             <div class="plate">
-              Xpressive
+              Bookiza
             </div>
             <div class="plate plate-back">
-              Xpressive
+              Bookiza
             </div>
             <div class="bamper"></div>
             <div class="handle"></div>
